fix badge color contrast
change "income" badge color to blue

--- a/frontend/src/stylesheets/Overview.css
+++ b/frontend/src/stylesheets/Overview.css
@@ -28,6 +28,6 @@
 	cursor: pointer;
 }
 
-.overview-item p {
+.overview-item {
 	color: #333;
 }
