--- a/frontend/src/stylesheets/datePicker.css
+++ b/frontend/src/stylesheets/datePicker.css
@@ -20,6 +20,3 @@
 .react-datepicker__month-text:hover {
   background-color: #534cea;
 }
-
-.react-date-picker__calendar-button {
-}
